--- a/persistent-volumes/pod-http.yaml
+++ b/persistent-volumes/pod-http.yaml
@@ -13,7 +13,7 @@ spec:
         name: www
     volumeMounts:
       - name: www-persistent-storage
-        mountPath: /usr/share/nginx/http
+        mountPath: /usr/share/nginx/html
   volumes:
     - name: www-persistent-storage
       persistentVolumeClaim:
