--- a/persistent-volumes/pod-mysql.yaml
+++ b/persistent-volumes/pod-mysql.yaml
@@ -25,3 +25,5 @@ spec:
         mountPath: /var/lib/mysql/data
   volumes:
     - name: mysql-persistent-storage
+      persistentVolumeClaim:
+        claimName: claim-http
