--- a/persistent-volumes/pod-mysql.yaml
+++ b/persistent-volumes/pod-mysql.yaml
@@ -26,4 +26,4 @@ spec:
   volumes:
     - name: mysql-persistent-storage
       persistentVolumeClaim:
-        claimName: claim-http
+        claimName: claim-mysql
