--- a/app/storageClass-mysql-web.yaml
+++ b/app/storageClass-mysql-web.yaml
@@ -1,1 +1,6 @@
-z
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: local-storage-mysql-web
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
